fixed word wrap in footer links

--- a/opdracht1/styles/style.css
+++ b/opdracht1/styles/style.css
@@ -48,12 +48,15 @@ nav {
     background-color: white;
     position: sticky;
     top: 0;
+    width: 100vw;
 }
 
 nav ul {
     margin: 0;
     padding: 1em;
     display: flex;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 nav ul li a {
@@ -126,15 +129,25 @@ footer section ul {
     padding: 0;
 }
 
+footer section ul li {
+    word-wrap: break-word;
+}
+
 footer section:first-of-type li {
     margin-right: 2em;
 }
+
+@media screen and (max-width: 800px) {
+    section {
+        padding: 0 1em;
+    }
+}
+
 
 @media screen and (min-width: 800px) {
     .image-container {
         grid-template-columns: repeat(3, 1fr);
     }
-
 }
 
 @media screen and (min-width: 1300px) {
